[DDW-280] Legacy notifications - JP translation

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -1402,14 +1402,14 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Legacy",
-        "description": "Label \"Legacy\" on the legacy badge.",
+        "defaultMessage": "!!!Byron",
+        "description": "Label \"Byron\" on the legacy badge.",
         "end": {
           "column": 3,
           "line": 13
         },
         "file": "source/renderer/app/components/notifications/LegacyBadge.js",
-        "id": "wallet.legacy.badge.label",
+        "id": "wallet.byron.badge.label",
         "start": {
           "column": 9,
           "line": 9
@@ -1425,41 +1425,69 @@
         "description": "Title \"Move funds from the legacy wallet\" on the legacy notification.",
         "end": {
           "column": 3,
-          "line": 17
+          "line": 24
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.moveFundsTitle",
+        "id": "wallet.byron.notification.moveFundsTitle",
         "start": {
           "column": 18,
-          "line": 12
+          "line": 19
         }
       },
       {
-        "defaultMessage": "!!!Create a new wallet",
-        "description": "Title \"Create a new wallet\" on the legacy notification.",
+        "defaultMessage": "!!!Create a Shelley wallet",
+        "description": "Title \"Create a Shelley wallet\" on the legacy notification.",
         "end": {
           "column": 3,
-          "line": 22
+          "line": 29
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.addWalletTitle",
+        "id": "wallet.byron.notification.addWalletTitle",
         "start": {
           "column": 18,
-          "line": 18
+          "line": 25
         }
       },
       {
-        "defaultMessage": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. Move testnet ada to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-        "description": "Legacy notification description WithNoFunds.",
+        "defaultMessage": "!!!\"{transferWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+        "description": "Legacy notification description.",
         "end": {
           "column": 3,
-          "line": 28
+          "line": 35
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.descriptionWithNoFunds",
+        "id": "wallet.byron.notification.moveFundsDescription.line1",
         "start": {
-          "column": 26,
-          "line": 23
+          "column": 29,
+          "line": 30
+        }
+      },
+      {
+        "defaultMessage": "!!!You can create a brand new wallet or move funds to one of your existing wallets.",
+        "description": "Legacy notification description.",
+        "end": {
+          "column": 3,
+          "line": 41
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.byron.notification.moveFundsDescription.line2",
+        "start": {
+          "column": 29,
+          "line": 36
+        }
+      },
+      {
+        "defaultMessage": "!!!brand new wallet",
+        "description": "Legacy notification link label.",
+        "end": {
+          "column": 3,
+          "line": 46
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.byron.notification.moveFundsDescription.line2.link.label",
+        "start": {
+          "column": 38,
+          "line": 42
         }
       },
       {
@@ -1467,13 +1495,41 @@
         "description": "Legacy notification description WithFunds.",
         "end": {
           "column": 3,
-          "line": 34
+          "line": 52
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.legacy.notification.descriptionWithFunds",
         "start": {
           "column": 24,
-          "line": 29
+          "line": 47
+        }
+      },
+      {
+        "defaultMessage": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+        "description": "Legacy notification description.",
+        "end": {
+          "column": 3,
+          "line": 58
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.byron.notification.addWalletDescription.line1",
+        "start": {
+          "column": 29,
+          "line": 53
+        }
+      },
+      {
+        "defaultMessage": "!!!Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
+        "description": "Legacy notification description.",
+        "end": {
+          "column": 3,
+          "line": 64
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.byron.notification.addWalletDescription.line2",
+        "start": {
+          "column": 29,
+          "line": 59
         }
       },
       {
@@ -1481,13 +1537,13 @@
         "description": "Learn more action of legacy notification.",
         "end": {
           "column": 3,
-          "line": 39
+          "line": 69
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.actionLearnMore",
+        "id": "wallet.byron.notification.actionLearnMore",
         "start": {
           "column": 19,
-          "line": 35
+          "line": 65
         }
       },
       {
@@ -1495,27 +1551,27 @@
         "description": "Move Move ada from this wallet of legacy notification.",
         "end": {
           "column": 3,
-          "line": 44
+          "line": 74
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.actionMove",
+        "id": "wallet.byron.notification.actionMove",
         "start": {
           "column": 14,
-          "line": 40
+          "line": 70
         }
       },
       {
-        "defaultMessage": "!!!Create a new Shelley wallet",
-        "description": "Create a new Shelley wallet action of legacy notification.",
+        "defaultMessage": "!!!Create a new wallet",
+        "description": "Create a new wallet action of legacy notification.",
         "end": {
           "column": 3,
-          "line": 49
+          "line": 79
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.addWallet",
+        "id": "wallet.byron.notification.addWallet",
         "start": {
           "column": 13,
-          "line": 45
+          "line": 75
         }
       },
       {
@@ -1523,13 +1579,13 @@
         "description": "\"Learn more\" link URL",
         "end": {
           "column": 3,
-          "line": 55
+          "line": 85
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.learnMore.url",
+        "id": "wallet.byron.notification.learnMore.url",
         "start": {
           "column": 20,
-          "line": 50
+          "line": 80
         }
       }
     ],
@@ -10326,8 +10382,8 @@
         }
       },
       {
-        "defaultMessage": "!!!Create a new Shelley wallet",
-        "description": "Description for the \"Create a new Shelley wallet\" button on the wallet add dialog.",
+        "defaultMessage": "!!!Create a new wallet",
+        "description": "Description for the \"Create a new wallet\" button on the wallet add dialog.",
         "end": {
           "column": 3,
           "line": 30
@@ -10485,11 +10541,11 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Create a new Shelley wallet",
-        "description": "Title \"Create a new Shelley wallet\" in the wallet create form.",
+        "defaultMessage": "!!!Create a new wallet",
+        "description": "Title \"Create a new wallet\" in the wallet create form.",
         "end": {
           "column": 3,
-          "line": 31
+          "line": 30
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.title.itn",
@@ -10503,13 +10559,13 @@
         "description": "Title \"Create a wallet\" in the wallet create form.",
         "end": {
           "column": 3,
-          "line": 36
+          "line": 35
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.title",
         "start": {
           "column": 15,
-          "line": 32
+          "line": 31
         }
       },
       {
@@ -10517,13 +10573,13 @@
         "description": "Label for the \"Wallet Name\" text input in the wallet create form.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 41
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.name.label",
         "start": {
           "column": 14,
-          "line": 37
+          "line": 36
         }
       },
       {
@@ -10531,13 +10587,13 @@
         "description": "Hint for the \"Wallet Name\" text input in the wallet create form.",
         "end": {
           "column": 3,
-          "line": 48
+          "line": 47
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.walletNameHint",
         "start": {
           "column": 18,
-          "line": 43
+          "line": 42
         }
       },
       {
@@ -10545,13 +10601,13 @@
         "description": "Label for the \"Create Shelley wallet\" button on create wallet dialog.",
         "end": {
           "column": 3,
-          "line": 54
+          "line": 53
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.create.personal.wallet.button.label.itn",
         "start": {
           "column": 27,
-          "line": 49
+          "line": 48
         }
       },
       {
@@ -10559,13 +10615,13 @@
         "description": "Label for the \"Create wallet\" button on create wallet dialog.",
         "end": {
           "column": 3,
-          "line": 60
+          "line": 59
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.create.personal.wallet.button.label",
         "start": {
           "column": 24,
-          "line": 55
+          "line": 54
         }
       },
       {
@@ -10573,13 +10629,13 @@
         "description": "Password creation label.",
         "end": {
           "column": 3,
-          "line": 65
+          "line": 64
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.passwordSectionLabel",
         "start": {
           "column": 24,
-          "line": 61
+          "line": 60
         }
       },
       {
@@ -10587,13 +10643,13 @@
         "description": "Password creation description.",
         "end": {
           "column": 3,
-          "line": 70
+          "line": 69
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.passwordSectionDescription",
         "start": {
           "column": 30,
-          "line": 66
+          "line": 65
         }
       },
       {
@@ -10601,13 +10657,13 @@
         "description": "Label for the \"Wallet password\" input in the create wallet dialog.",
         "end": {
           "column": 3,
-          "line": 76
+          "line": 75
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.spendingPasswordLabel",
         "start": {
           "column": 25,
-          "line": 71
+          "line": 70
         }
       },
       {
@@ -10615,13 +10671,13 @@
         "description": "Label for the \"Repeat password\" input in the create wallet dialog.",
         "end": {
           "column": 3,
-          "line": 82
+          "line": 81
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.repeatPasswordLabel",
         "start": {
           "column": 23,
-          "line": 77
+          "line": 76
         }
       },
       {
@@ -10629,13 +10685,13 @@
         "description": "Placeholder for the \"Password\" inputs in the create wallet dialog.",
         "end": {
           "column": 3,
-          "line": 88
+          "line": 87
         },
         "file": "source/renderer/app/components/wallet/WalletCreateDialog.js",
         "id": "wallet.create.dialog.passwordFieldPlaceholder",
         "start": {
           "column": 28,
-          "line": 83
+          "line": 82
         }
       }
     ],
@@ -12779,5 +12835,183 @@
       }
     ],
     "path": "source/renderer/app/utils/paperWalletPdfGenerator.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "!!!Create",
+        "description": "Create label.",
+        "end": {
+          "column": 3,
+          "line": 36
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "global.labels.create",
+        "start": {
+          "column": 10,
+          "line": 32
+        }
+      },
+      {
+        "defaultMessage": "!!!Create a new wallet",
+        "description": "Create a new wallet description.",
+        "end": {
+          "column": 3,
+          "line": 41
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "wallet.add.dialog.create.description",
+        "start": {
+          "column": 19,
+          "line": 37
+        }
+      },
+      {
+        "defaultMessage": "!!!Join",
+        "description": "Join label.",
+        "end": {
+          "column": 3,
+          "line": 46
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "wallet.add.dialog.join.label",
+        "start": {
+          "column": 8,
+          "line": 42
+        }
+      },
+      {
+        "defaultMessage": "!!!Join a shared wallet",
+        "description": "Join a shared wallet description.",
+        "end": {
+          "column": 3,
+          "line": 51
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "wallet.add.dialog.join.description",
+        "start": {
+          "column": 20,
+          "line": 47
+        }
+      },
+      {
+        "defaultMessage": "!!!Import",
+        "description": "Import label.",
+        "end": {
+          "column": 3,
+          "line": 56
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "wallet.add.dialog.import.label",
+        "start": {
+          "column": 10,
+          "line": 52
+        }
+      },
+      {
+        "defaultMessage": "!!!Import wallets from an earlier version of Daedalus or the Daedalus state directory",
+        "description": "Import wallets from an earlier version of Daedalus or the Daedalus state directory description.",
+        "end": {
+          "column": 3,
+          "line": 63
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "wallet.add.dialog.import.description",
+        "start": {
+          "column": 24,
+          "line": 57
+        }
+      },
+      {
+        "defaultMessage": "!!!Recovery Phrase",
+        "description": "Recovery Phrase description.",
+        "end": {
+          "column": 3,
+          "line": 68
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "wallet.restore.dialog.mnemonicsStep",
+        "start": {
+          "column": 18,
+          "line": 64
+        }
+      },
+      {
+        "defaultMessage": "!!!Save",
+        "description": "Save description.",
+        "end": {
+          "column": 3,
+          "line": 73
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "global.labels.save",
+        "start": {
+          "column": 8,
+          "line": 69
+        }
+      },
+      {
+        "defaultMessage": "!!!Follow instructions and manually update",
+        "description": "Follow instructions and manually update description.",
+        "end": {
+          "column": 3,
+          "line": 78
+        },
+        "file": "storybook/stories/common/Widgets.stories.js",
+        "id": "manualUpdate.button.label",
+        "start": {
+          "column": 22,
+          "line": 74
+        }
+      }
+    ],
+    "path": "storybook/stories/common/Widgets.stories.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "!!!Read More",
+        "description": "Read More button label.",
+        "end": {
+          "column": 3,
+          "line": 37
+        },
+        "file": "storybook/stories/news/AlertsOverlay.stories.js",
+        "id": "global.labels.readMore",
+        "start": {
+          "column": 12,
+          "line": 33
+        }
+      },
+      {
+        "defaultMessage": "!!!Failure Alert",
+        "description": "Failure Alert title.",
+        "end": {
+          "column": 3,
+          "line": 42
+        },
+        "file": "storybook/stories/news/AlertsOverlay.stories.js",
+        "id": "global.errors.failureAlert",
+        "start": {
+          "column": 16,
+          "line": 38
+        }
+      },
+      {
+        "defaultMessage": "!!!Content",
+        "description": "Content.",
+        "end": {
+          "column": 3,
+          "line": 47
+        },
+        "file": "storybook/stories/news/AlertsOverlay.stories.js",
+        "id": "static.dummy.markdown",
+        "start": {
+          "column": 11,
+          "line": 43
+        }
+      }
+    ],
+    "path": "storybook/stories/news/AlertsOverlay.stories.json"
   }
 ]
