--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -112,6 +112,7 @@
   "global.duration.months": "months",
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
+  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
@@ -127,6 +128,7 @@
   "global.labels.close": "Close",
   "global.labels.create": "Create",
   "global.labels.filter": "Filter",
+  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "Remove",
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
@@ -417,6 +419,7 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
+  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "I understand",
   "static.splash.network.flightDescription1": "Thank you for downloading the Daedalus Flight wallet! This version of Daedalus is specially created so users can test new features and we can squash usability bugs before pushing releases to the mainnet production version of the Daedalus wallet. ",
   "static.splash.network.flightDescription2": "Although Flight candidates are designed to test functionality, this is on the mainnet and will <b>be using mainnet ada. Transactions made using Flight candidates will be real ada payments.</b> If you are not a power user, we recommend you stick to using our stable, fully-tested production Daedalus wallet client. It is very important to note that transactions performed in Daedalus Flight are real and your funds will be transferred because the Cardano blockchain will be validating all transactions on mainnet.",
@@ -506,6 +509,18 @@
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "I understand that the only way to recover my wallet if my computer is lost, broken, stolen, or stops working is to use my wallet recovery phrase.",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>I understand that I will need the wallet recovery phrase of this wallet to receive my Incentivized Testnet ada rewards on the Cardano mainnet.</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "Verify your wallet recovery phrase by clicking words in the exact order you wrote them down.",
+  "wallet.byron.badge.label": "Byron",
+  "wallet.byron.notification.actionLearnMore": "Learn more",
+  "wallet.byron.notification.actionMove": "Move ada from this wallet",
+  "wallet.byron.notification.addWallet": "Create a new wallet",
+  "wallet.byron.notification.addWalletDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.addWalletDescription.line2": "Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
+  "wallet.byron.notification.addWalletTitle": "Create a Shelley wallet",
+  "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
+  "wallet.byron.notification.moveFundsDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.moveFundsDescription.line2": "You can create a {link} or move funds to one of your existing wallets.",
+  "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
+  "wallet.byron.notification.moveFundsTitle": "Move funds from <q>{activeWalletName}</q>",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create wallet",
   "wallet.create.dialog.create.personal.wallet.button.label.itn": "Create Shelley wallet",
@@ -542,21 +557,7 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
-  "wallet.byron.badge.label": "Byron",
-  "wallet.byron.notification.actionLearnMore": "Learn more",
-  "wallet.byron.notification.actionMove": "Move ada from this wallet",
-  "wallet.byron.notification.addWallet": "Create a new wallet",
-  "wallet.byron.notification.addWalletDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
-  "wallet.byron.notification.addWalletDescription.line2": "Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
-  "wallet.byron.notification.addWalletTitle": "Create a new wallet",
-  "wallet.byron.notification.addWalletTitle": "Create a Shelley wallet",
-  "wallet.byron.notification.descriptionWithFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
-  "wallet.byron.notification.descriptionWithNoFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-  "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
-  "wallet.byron.notification.moveFundsDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
-  "wallet.byron.notification.moveFundsDescription.line2": " You can create a {link} or move funds to one of your existing wallets.",
-  "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
-  "wallet.byron.notification.moveFundsTitle": "Move testnet ada from <q>{activeWalletName}</q>",
+  "wallet.legacy.notification.descriptionWithFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
   "wallet.navigation.more": "More",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
